Fix line numbers alignment

--- a/source/css/prism.css
+++ b/source/css/prism.css
@@ -72,7 +72,6 @@ pre[class*="language-"].line-numbers > code {
 	position: absolute;
 	pointer-events: none;
 	top: 0;
-	margin-top: -2px;
 	font-size: 100%;
 	left: -3.8em;
 	width: 3em; /* works for line-numbers below 1000 lines */
@@ -113,6 +112,7 @@ pre[class*="language-"].line-numbers > code {
 	}
 
 	code {
+		display: block;
 		color: inherit;
 	}
 }
